# ebiv

./: .gitignore  CITATION.cff  LICENSE  README.md
pyebiv/: pyproject.toml  setup.py
pyebiv/include/: ebi.h  ebi_data.h  ebi_image.h  ebi_structs.h
pyebiv/pyebiv/: compile_pyebiv.bat  pyEBIV.sln  pyEBIV.vcxproj  pyEBIV.vcxproj.filters  pyebiv.cpp  pyebiv.h  pyebiv.i  pyebiv_pybind.cpp  pyebiv_wrap.cpp  swig.props
pyebiv/pyebiv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyebiv/python_v3.10/: _pyebiv.pyd  pyebiv.py
pyebiv/python_v3.11/: _pyebiv.pyd  pyebiv.py
pyebiv/python_v3.9/: _pyebiv.pyd
pyebiv/src/: ebi_events.cpp  ebi_image.cpp  ebi_utils.cpp
pyebiv/src/pyebiv.egg-info/: PKG-INFO  SOURCES.txt
python/: _pyebiv.pyd  ebiv_process.py  ebiv_utils.py  plot_fig10_sumcorr.py  plot_fig7.py  plot_fig9_motioncomp.py  plot_velmap.py  pulsed_ebiv_processing.py  pyebiv.py  test_evt_save.py  velmap_utils.py
python_unix/: ebiv_params.py  ebiv_process.py  ebiv_utils.py  plot_fig10_sumcorr.py  plot_utils.py  plot_velmap.py  pulsed_ebiv_processing.py
sample_data/: ebiv_params.cfg  starting_jet_20230707_164949.bias  veldata_t10ms_w32_corr_tau3ms.npz  veldata_t10ms_w40_corr_tau3ms.npz  veldata_t10ms_w40_motion_res0_25.npz
